--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,7 @@
     <a name="page-top" id="page-top"></a>
     <section class="darkbrown">
       <div class="container">
-        <div class="row login-bar">
-          <div class="col-md-10 offset-md-1 col-sm-12 col-xs-12">
+        <div class="login-bar">
             <ul class="navi">
               <!--<li>
                 <p class="tel">
@@ -18,9 +17,7 @@
             </ul>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="dark-bg-nopict padding">
+
       <div class="container">
         <div class="row">
           <div class="col-md-10 offset-md-1 col-sm-12 col-xs-12">
@@ -31,8 +28,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="darkbrown">
+
+
       <div class="container">
         <div class="row">
           <div class="col-md-10 offset-md-1 col-sm-12 col-xs-12">
