nya sajtens struktur färdig för header, navi och footer, fast footer har inget innehåll ännu

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,5 @@
 <footer class="site-footer">
-  <div class="wrapper">
-
-    <section class="darkbrown spacing-unit">
-      <div class="container">
-        <div class="row login-bar">
-          <div class="col-md-10 offset-md-1 col-sm-12 col-xs-12">
+  <div class="wrapper black">
             <div class="navi-footer">
                 <p class="tel">
                   <a href="tel:0407642085">
@@ -12,28 +7,11 @@
                     040 764 2085</a>
                   &nbsp;&nbsp;&nbsp;</p><a href="mailto:lotta.hardman@gmail.com?subject=Hej! Mitt ärende gäller DrHardmans produkter.">lotta.hardman@gmail.com</a>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="dark-bg-nopict padding">
-      <div class="container">
-        <div class="row">
-          <div class="hidden-xs-down col-md-10 offset-md-1 col-sm-12">
+
             <a class="logo" href="#page-top">
               <img class="icon middle" src="/img/logodrhardman200.png" alt="Dr Hardman logo">
               <h1 class="middle">CLEAN FOOD FOR HEALTHY SKIN</h1>
             </a>
-          </div>
-          <div class="hidden-sm-up col-sm-12 col-xs-12">
-            <a class="logo" href="#page-top">
-              <img class="" src="/img/logodrhardman200.png" alt="Dr Hardman logo"></a><br>
-            <h1 class="footerh1">CLEAN FOOD FOR HEALTHY SKIN</h1>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
   </div>
 </footer>
 
