--- a/css/main.scss
+++ b/css/main.scss
@@ -6,9 +6,9 @@
 
 
 // Our variables
-$base-font-family: "cronos-pro",sans-serif;
-$base-font-size:   18px;
-$base-font-weight: 400;
+$base-font-family: "open sans",sans-serif;
+$base-font-size:   14px;
+$base-font-weight: 200;
 $small-font-size:  $base-font-size * 0.875;
 $large-font-size:  $base-font-size * 1.475;
 $base-line-height: 1.6;
@@ -17,8 +17,8 @@ $spacing-unit:     17px;
 $base-padding:      27px;
 $dubbel-padding:    54px;
 
-$text-color:        #000000;
-$background-color:  #ffffff;
+$text-color: #ffe9ee;
+$background-color:  #000000;
 $orange-color:      #00bdbe;
 $white-color:       #fcfaf8;
 $darkbrown-color:   #241e1d;
