--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,92 +2,9 @@
 
   <div class="wrapper">
     <a name="page-top" id="page-top"></a>
-    <section class="darkbrown">
-      <div class="container">
-        <div class="login-bar">
-            <ul class="navi">
-              <!--<li>
-                <p class="tel">
-                <a href="tel:0407642085">
-                  <i class="fa fa-phone"></i>
-                  040 764 2085</a>
-              </p>
-              </li>-->
-              <li class=""><a class="pull-right tel" href="/fi">Suomeksi</a></li>
-            </ul>
-          </div>
-        </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-10 offset-md-1 col-sm-12 col-xs-12">
-            <a class="logo" href="/">
-              <img class="icon middle" src="/img/logodrhardman200.png" alt="Dr Hardman logo">
-              <h1 class="middle">DR HARDMAN</h1>
-            </a>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-10 offset-md-1 col-sm-12 col-xs-12">
-            <ul class="nav navi">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" style="padding-left:0;" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Produkter</a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/#page-produkter">ALLA PRODUKTER</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/pitstopregular">No 10 Pit Stop Regular Deodorant</a>
-                    <a class="dropdown-item" href="/sheabodybutter">No 22 Shea Body Butter</a>
-                    <a class="dropdown-item" href="/citrusbodybutter">No 23 Citrus Body Butter</a>
-                    <a class="dropdown-item" href="/cocoabodybutter">No 24 Cocoa Body Butter</a>
-                    <a class="dropdown-item" href="/mangobodybutter"> No 25 Mango Body Butter</a>
-                    <a class="dropdown-item" href="/rosebodybutter"> No 26 Rose Body Butter</a>
-                    <a class="dropdown-item" href="/clarified">No 30 Clarified Face Oil</a>
-                    <a class="dropdown-item" href="/youthfulglow">No 31 Youthful Glow Face Oil</a>
-                    <a class="dropdown-item" href="/serendipity">No 32 Serendipity Face Oil</a>
-                    <a class="dropdown-item" href="/agedefence">No 44 Age Defence Cream</a>
-                    <a class="dropdown-item" href="/monoilotion">No 45 Monoi Lotion</a>
-                    <a class="dropdown-item" href="/pawsandclawsraw">No 47 Paws and Claws Raw</a>
-                    <a class="dropdown-item" href="/pawsandclawslavender">No 48 Paws and Claws Lavender</a>
-                    <a class="dropdown-item" href="/pawsandclawsvanilla">No 49 Paws and Claws Vanilla-Orange</a>
-                    <a class="dropdown-item" href="/shampoobar">No 55 Shampoo Bar Citrus</a>
-                    <a class="dropdown-item" href="/aloeconditioner">No 56 Aloe Vera Conditioner</a>
-                   <a class="dropdown-item" href="/redrescuemask">No 66 Red Rescue Mask</a>
-                   <a class="dropdown-item" href="/no67-cleansing-and-hydrating-face-mask">No 67 Cleansing & Hydrating Face Mask</a>
-                    <!--<a class="dropdown-item" href="/no68-tight-and-bright-face-mask">No 68 Tight & Bright Face Mask Powder</a>-->
-                   <a class="dropdown-item" href="/lipbalm">No 70 Vanilla-choko Lip Balm</a>
-                   <a class="dropdown-item" href="/lipbalmvitamin">No 71 Vitamin Lip Balm</a>
-                    <a class="dropdown-item" href="/no80-gentle-face-wash-powder">No 80 Gentle Face Wash</a>
-                    <a class="dropdown-item" href="/no81-lux-soap">No 81 Lux Soap ansiktstvål</a>
-                    <a class="dropdown-item" href="/no90-refreshing-face-mist">No 90 Refreshing Face Mist</a>
-                    <!--<a class="dropdown-item" href="/no91-calming-face-mist">No 91 Calming Face Mist</a>-->
-                    <a class="dropdown-item" href="/no92-purifying-face-mist">No 92 Purifying Face Mist</a>
-                    <a class="dropdown-item" href="/no93-hydrating-face-mist">No 93 Hydrating Face Mist</a>
-                </div>
-              </li>
-              <li class="nav-item dropdown">
-                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Bra att veta</a>
-                 <div class="dropdown-menu" id="second">
-                    <a class="dropdown-item" href="/braattveta">ALLT BRA ATT VETA</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/braattveta#bodybutters">Om body butters</a>
-                    <a class="dropdown-item" href="/braattveta#konserveringsmedel">Utan konserveringsmedel</a>
-                    <a class="dropdown-item" href="/braattveta#emulgeringsmedel">Utan emulgeringsmedel</a>
-                    <a class="dropdown-item" href="/braattveta#phytoboosters">Om fytoaromatiska oljor</a>
-                    <a class="dropdown-item" href="/braattveta#shampoobar">Om schampo i bit</a>
-                    <a class="dropdown-item" href="/braattveta#vaxtextrakt">Om växtextrakt</a>
-                    <a class="dropdown-item" href="/braattveta#muslinduk">Om muslinduken</a>
-                    <a class="dropdown-item" href="/braattveta#drlottahardman">Om Dr Lotta Hardman</a>
-                 </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
+        {% include navbar.html %}
+        <a class="logo" href="/"><img class="logoimg img-fluid" src="/img/DRH_logo_invert.png" alt="Dr Hardman logo"></a>
+        <a class="logonamn" href="/"><img class="logonamnimg img-fluid" src="/img/drhardmanlogo.png" alt="Dr Hardman name"></a>
   </div>
 
 </header>
