--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,51 @@
+
+//* DOC STYLES *//
+
+html, body {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+  -ms-overflow-style: scrollbar;
+  color: $background-color;
+  background: url('../img/bgs/darklady.jpg')  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+body #page-id-1 {
+  background: url('../img/bgs/dawn.jpg') center top;
+
+}
+
+img {
+  image-rendering: -webkit-optimize-contrast;
+}
+
+#sitewrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+header {
+  max-width: 10%;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.page-content {
+  max-width: 65%;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 //* FONT STYLES *//
 body,
 h2,
@@ -10,7 +58,7 @@ p {
 
 p {
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
   color: $text-color;
   font-size: $base-font-size;
     &.large-font-size {
@@ -102,23 +150,11 @@ hr.primary, hr.light, hr.dark {
 }
 
 
-//* DOC STYLES *//
 
-html, body {
-  width: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden;
-  -ms-overflow-style: scrollbar;
-  color: $background-color;
-}
-
-img {
-  image-rendering: -webkit-optimize-contrast;
-}
-
-#wrapper {
-  width: 100%;
+//* GENERAL STYLES *//
+.img-fluid {
+  max-width: 100%;
+  height: auto;
 }
 
 .spacing-unit {
@@ -127,49 +163,25 @@ img {
 }
 
 .padding {
-  padding-top: $base-padding;
-  padding-bottom: $base-padding;
+  padding: $base-padding;
 }
 
 .dubbelpadding {
   padding-top: $dubbel-padding;
   padding-bottom: $dubbel-padding;
+  padding-left: $base-padding;
+  padding-right: $base-padding;
 }
 
-.darkbrown {
-  background: url('../img/dome.jpg') center top;
-  width: 100%;
-  height: 60vh;
+.text-center {
+  text-align: center;
 }
 
 .white {
   background-color: #ffffff;
 }
-
-.dark-bg {
-  /*background-color: #2b2500;*/
-}
-
-.bild, .bild-top {
-  background-image: url(/img/cremeB.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.bild-top {
- min-height: 35vh;
-}
-
-.dark-bg-nopict {
-  /*background-color: rgba(42, 33, 34, 1);*/
-  background-image: url(/img/creme-hf.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.light-bg {
-  position: relative;
-  background-image:  url(/img/light-bg.jpg);
-
+.black {
+  background-color: #000000;
 }
 
 
@@ -194,80 +206,92 @@ button, .button {
   }
 }
 
-//* NAV STYLES *//
 
-.tel {
-  float: left;
-  margin: 0;
-  line-height: 27px;
-}
-
-.login-bar a, .tel {
-  color: $white-color;
-  font-family: "cronos-pro",sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  text-decoration: none;
-
-  &:hover {
-    color: $darkbrown-color-light;
+//* HEADER STYLES *//
+.site-header .wrapper {
+  .logo img.logoimg {
+    max-width: 80px;
+    padding-top: $base-padding;
+    padding-bottom: $base-padding;
+  }
+  .logonamn img.logonamnimg {
+    max-width: 40px;
+    padding-bottom: $base-padding;
+  }
+  ul.navi {
+    padding-top: $dubbel-padding;
   }
 }
 
-.logo a, .logo h1 {
-  color: $white-color;
-}
+    //* NAV STYLES *//
 
-.logo h1 {
-  margin-top: 10px;
-  display: inline;
-  font-size: 32px;
-}
-
-.logo img {
-  max-height: 60px;
-  margin-right:20px;
-  display: inline-block;
-}
-
-.icon {
-  display: inline-block;
-  /* size, color, etc. */
-}
-
-.middle {
-  vertical-align: middle;
-}
-
-ul.navi  {
-  padding-left: 0px;
-  margin-bottom: 0px;
-
-  & > li {
-    display: inline;
-    padding-right: 30px;
-
-    & > a {
-      color: $white-color;
-
-      &:hover {
-        color: $orange-color;
-      }
-
-    }
+  .icon {
+    display: inline-block;
+    /* size, color, etc. */
   }
-}
 
+  ul.navi {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+
+  li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 7px 8px;
+    text-decoration: none;
+  }
+
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: $orange-color;
+  }
+
+  li.dropdown {
+    display: inline-block;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #f1f1f1
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+
+
+//* BREADCRUMB STYLES *//
 
   .sidnavi >li+li:before {
     content: "/";
     display: inline-block;
-    margin-right: 10px;
+
     color: $blue;
   }
 
   ul.sidnavi > li.listsidnavi {
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 0;
   }
 
 
@@ -429,6 +453,7 @@ ul.navi  {
 
   .site-footer {
     bottom:0px;
+    padding-top: $spacing-unit;
   }
 
   .footerh1 {
