--- a/css/main.css
+++ b/css/main.css
@@ -10,36 +10,36 @@ Error: Invalid CSS after "@charset "utf-8"": expected "{", was ";"
 6: 
 7: 
 8: // Our variables
-9: $base-font-family: "cronos-pro",sans-serif;
+9: $base-font-family: "open sans",sans-serif;
 
 Backtrace:
 main.scss:4
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:1278:in `expected'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:1208:in `expected'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:1203:in `tok!'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:677:in `block'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:670:in `ruleset'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:696:in `block_child'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:686:in `block_contents'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:137:in `stylesheet'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:41:in `parse'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/engine.rb:414:in `_to_tree'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/engine.rb:307:in `render_with_sourcemap'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `each'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/plugin.rb:82:in `update_stylesheets'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/exec/sass_scss.rb:340:in `watch_or_update'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/exec/sass_scss.rb:51:in `process_result'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/exec/base.rb:52:in `parse'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/exec/base.rb:19:in `parse!'
-/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.5.6/bin/scss:13:in `<top (required)>'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/scss/parser.rb:1278:in `expected'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/scss/parser.rb:1208:in `expected'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/scss/parser.rb:1203:in `tok!'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/scss/parser.rb:677:in `block'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/scss/parser.rb:670:in `ruleset'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/scss/parser.rb:696:in `block_child'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/scss/parser.rb:686:in `block_contents'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/scss/parser.rb:137:in `stylesheet'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/scss/parser.rb:41:in `parse'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/engine.rb:414:in `_to_tree'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/engine.rb:307:in `render_with_sourcemap'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/plugin/compiler.rb:209:in `each'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/plugin.rb:82:in `update_stylesheets'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/exec/sass_scss.rb:338:in `watch_or_update'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/exec/base.rb:50:in `parse'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/lib/sass/exec/base.rb:18:in `parse!'
+/usr/local/lib/ruby/gems/2.5.0/gems/sass-3.6.0/bin/scss:13:in `<top (required)>'
 /usr/local/bin/scss:23:in `load'
 /usr/local/bin/scss:23:in `<main>'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Invalid CSS after \"@charset \"utf-8\"\": expected \"{\", was \";\"\A         on line 4 of main.scss\A \A 1: ---\A 2: # Only the main Sass file needs front matter (the dashes are enough)\A 3: ---\A 4: @charset \"utf-8\";\A 5: \A 6: \A 7: \A 8: // Our variables\A 9: $base-font-family: \"cronos-pro\",sans-serif;"; }
+  content: "Error: Invalid CSS after \"@charset \"utf-8\"\": expected \"{\", was \";\"\A         on line 4 of main.scss\A \A 1: ---\A 2: # Only the main Sass file needs front matter (the dashes are enough)\A 3: ---\A 4: @charset \"utf-8\";\A 5: \A 6: \A 7: \A 8: // Our variables\A 9: $base-font-family: \"open sans\",sans-serif;"; }
