snow och annat smått

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,16 +19,16 @@
 
   <title>Dr Hardman</title>
 
+  <!-- Slider -->
   <link href="/slick/slick.css" rel="stylesheet"  type="text/css"/>
   <link href="/slick/slick-theme.css" rel="stylesheet"  type="text/css"/>
 
   <!-- Fonts -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-
   <link rel="icon" type="image/png" href="{{ "/img/favicon.png" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-
+  <link rel="stylesheet" type="text/css" href="/js/snow.css">
 
   <!-- Javascripts -->
   <script src="https://use.typekit.net/shz0rmu.js"></script>
@@ -38,4 +38,5 @@
 
   <script defer type="text/javascript" src="/slick/slick.min.js"></script>
   <script defer type="text/javascript" src="/slick/slick_init.js"></script>
+  <script defer type="text/javascript" src="/js/snow.js"></script>
 </head>
