--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,15 @@
           fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
   </script>
+  <script>
+      document.addEventListener('DOMContentLoaded', function() {
+          new Snow('#sitewrapper',{
+              number:45,
+              r: 4,
+              v: 1.4
+          });
+      });
+  </script>
 
   <div id="sitewrapper">
     <a class="jumptarget" name="page-top" id="page-top"></a>
