--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,8 @@
 
 
 // Our variables
-$base-font-family: "open sans",sans-serif;
-$base-font-size:   14px;
+$base-font-family: 'Cronos Pro', sans-serif;
+$base-font-size:   18px;
 $base-font-weight: 200;
 $small-font-size:  $base-font-size * 0.875;
 $large-font-size:  $base-font-size * 1.475;
@@ -17,18 +17,17 @@ $spacing-unit:     17px;
 $base-padding:      27px;
 $dubbel-padding:    54px;
 
-$text-color: #ffe9ee;
+$text-color:        #fcfaf8;
 $background-color:  #000000;
 $orange-color:      #00bdbe;
 $white-color:       #fcfaf8;
-$darkbrown-color:   #241e1d;
-$darkbrown-color-light: #6e99d4;
-$darkbrown-color-dark:  #6e99d4;
+$dark-color:        #131314;
+$dark-color-light: #6e99d4;
+$dark-color-dark:  #6e99d4;
 $beige:             #e0c09f;
 $green:             #71a82b;
 $sidnavi:           #937d7a;
 $blue:              #6e99d4;
-
 
 
 
