--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,15 +26,15 @@
             <a class="dropdown-item" href="/lipbalmvitamin">No 71 Vitamin Lip Balm</a>
             <a class="dropdown-item" href="/no80-gentle-face-wash-powder">No 80 Gentle Face Wash</a>
             <a class="dropdown-item" href="/no81-lux-soap">No 81 Lux Soap ansiktstvål</a>
-            <a class="dropdown-item" href="/no90-refreshing-face-mist">No 90 Refreshing Face Mist</a>
-            <a class="dropdown-item" href="/no92-purifying-face-mist">No 92 Purifying Face Mist</a>
+            <!--<a class="dropdown-item" href="/no90-refreshing-face-mist">No 90 Refreshing Face Mist</a>
+            <a class="dropdown-item" href="/no92-purifying-face-mist">No 92 Purifying Face Mist</a>-->
             <a class="dropdown-item" href="/no93-hydrating-face-mist">No 93 Hydrating Face Mist</a>
         </div>
     </li>
     <li class="nav-item dropdown">
         <a <a href="javascript:void(0)" class="dropbtn">Bra att veta</a>
         <div class="dropdown-content" id="second">
-            <a class="dropdown-item" href="/braattveta">ALLT BRA ATT VETA</a>
+            <a class="dropdown-item" href="/braattveta"{% if page.url == "/braattveta" %} style="color: red;" {% endif %}>ALLT BRA ATT VETA</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/braattveta#bodybutters">Om body butters</a>
             <a class="dropdown-item" href="/braattveta#konserveringsmedel">Utan konserveringsmedel</a>
@@ -46,5 +46,5 @@
             <a class="dropdown-item" href="/braattveta#drlottahardman">Om Dr Lotta Hardman</a>
         </div>
     </li>
-    <li class="nav-item"><a class="" href="/fi">Suomeksi</a></li>
+    <li class="nav-item"><a  href="/fi" {% if page.url == "/fi" %} style="color: red;" {% endif %}>Suomeksi</a></li>
 </ul>
