--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ Error: Invalid CSS after "@charset "utf-8"": expected "{", was ";"
 6: 
 7: 
 8: // Our variables
-9: $base-font-family: "open sans",sans-serif;
+9: $base-font-family: 'Cronos Pro', sans-serif;
 
 Backtrace:
 main.scss:4
@@ -42,4 +42,4 @@ main.scss:4
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Invalid CSS after \"@charset \"utf-8\"\": expected \"{\", was \";\"\A         on line 4 of main.scss\A \A 1: ---\A 2: # Only the main Sass file needs front matter (the dashes are enough)\A 3: ---\A 4: @charset \"utf-8\";\A 5: \A 6: \A 7: \A 8: // Our variables\A 9: $base-font-family: \"open sans\",sans-serif;"; }
+  content: "Error: Invalid CSS after \"@charset \"utf-8\"\": expected \"{\", was \";\"\A         on line 4 of main.scss\A \A 1: ---\A 2: # Only the main Sass file needs front matter (the dashes are enough)\A 3: ---\A 4: @charset \"utf-8\";\A 5: \A 6: \A 7: \A 8: // Our variables\A 9: $base-font-family: 'Cronos Pro', sans-serif;"; }
