working front page for header footer mobile myös

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,16 @@
-<footer class="site-footer">
-  <div class="wrapper black">
-            <div class="navi-footer">
-                <p class="tel">
-                  <a href="tel:0407642085">
-                    <i class="fa fa-phone"></i>
-                    040 764 2085</a>
-                  &nbsp;&nbsp;&nbsp;</p><a href="mailto:lotta.hardman@gmail.com?subject=Hej! Mitt ärende gäller DrHardmans produkter.">lotta.hardman@gmail.com</a>
-            </div>
+<footer class="site-footer black">
+  <div class="wrapper dubbelpadding">
+      <a class="logo" href="#page-top">
+          <img class="icon" src="/img/logodrhardman200.png" alt="Dr Hardman logo">
+          <h1 class="">CLEAN FOOD FOR HEALTHY SKIN</h1>
+      </a>
+      <div class="navi-footer">
+          <p class="tel"><a href="tel:0407642085">Siirto, Pivo, MobilePay + <br>
+            <i class="fa fa-phone"></i> 040 764 2085</a><br>
+          <a href="mailto:lotta.hardman@gmail.com?subject=Hej! Mitt ärende gäller DrHardmans produkter.">lotta.hardman@gmail.com</a>
+          </p>
+      </div>
 
-            <a class="logo" href="#page-top">
-              <img class="icon middle" src="/img/logodrhardman200.png" alt="Dr Hardman logo">
-              <h1 class="middle">CLEAN FOOD FOR HEALTHY SKIN</h1>
-            </a>
   </div>
 </footer>
 
