--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<ul class="nav navi">
+<ul class="nav navi text-center">
     <li class="nav-item dropdown">
         <a href="javascript:void(0)" class="dropbtn">Produkter</a>
         <div class="dropdown-content">
