--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,3 +20,12 @@ comments: true
         <hr class="primary" />
         <h4>Kommentera och diskutera produkten här:</h4>
 </section>-->
+<section class="fbandup">
+    <div
+            class="fb-like"
+            data-share="true"
+            data-width="450"
+            data-show-faces="true">
+    </div>
+    <a class="up" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
+</section>
