--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 
 // Our variables
 $base-font-family: 'Cronos Pro', sans-serif;
-$base-font-size:   1.4rem;
+$base-font-size:   1.2rem;
 $base-font-weight: 300;
 $small-font-size:  $base-font-size * 0.875;
 $large-font-size:  $base-font-size * 1.475;
@@ -17,12 +17,12 @@ $spacing-unit:      1rem;
 $base-padding:      2rem;
 $dubbel-padding:    4rem;
 
-$text-color:        #ffffff;
+$text-color:        #b1b1b1;
 $background-color:  #000000;
-$turkos:            #00bdbe;
+$link-color:        #ffffff;
 $light-color:       #fcfaf8;
 $dark-color:        #131314;
-$dark-color-light:  #6e99d4;
+$dark-color-light:  #96c1ff;
 $dark-color-dark:   #6e99d4;
 $beige:             #e0c09f;
 $green:             #00a14b;
