nya bakgrundsbilder + lite stilar till page article

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="site-footer black">
-  <div class="wrapper dubbelpadding">
+<footer class="site-footer">
+  <div class="wrapper padding">
       <a class="logo" href="#page-top">
           <img class="icon" src="/img/logodrhardman200.png" alt="Dr Hardman logo">
           <h1 class="">CLEAN FOOD FOR HEALTHY SKIN</h1>
