--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,7 +7,6 @@ html {
 }
 
 body {
-  position: relative;
   height:100%;
   padding: 0;
   margin: 0;
@@ -23,6 +22,50 @@ body {
   font-feature-settings: "kern" 1;
   font-kerning: normal;
   -ms-overflow-style: scrollbar;
+  background: url('../img/bgs/trappa.jpg')  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+body#page-1 {
+  background: url('../img/bgs/kaktus.jpg')  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
+body#page-10 {
+  background: url('../img/bgs/maneter.jpg')  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body#page-22 {
+  background: url('../img/bgs/water.jpg')  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body#page-23 {
+  background: url('../img/bgs/orangeleaf.jpg')  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body#page-44 {
+  background: url('../img/bgs/purplerain.jpg')  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body#page-66 {
   background: url('../img/bgs/orange.jpg')  no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -31,16 +74,12 @@ body {
 }
 
 
-
-body#page-1 {
-  background: url('../img/bgs/dawn.jpg')  no-repeat center center fixed;
-}
-
-body#page-2 {
-  background: url('../img/bgs/darklady.jpg')  no-repeat center center fixed;
-}
-body#page-3 {
-  background: url('../img/bgs/darklady.jpg')  no-repeat center center fixed;
+body#page-56 {
+  background: url('../img/bgs/kaktus.jpg')  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 
@@ -54,6 +93,10 @@ img {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  @media (min-width: $laptop) {
+    max-width: 70%;
+    margin: 0 auto;
+  }
 
   header.site-header {
     z-index: 4;
@@ -226,20 +269,9 @@ img.img-fluid {
 .grey {
   background-color: rgba(38, 41, 43, 0.87);
 }
-.black04 {
-  background-color: rgba(0, 0, 0, 0.4);
-}
-.black06 {
-  background-color: rgba(0, 0, 0, 0.6);
-}
-.black08 {
-  background-color: rgba(0, 0, 0, 0.8);
-}
 .orange {
   color:  $pink;
 }
-
-
 
 
 button, .button {
@@ -384,7 +416,7 @@ button, .button {
 }
 
  .sloganbox#sloganbox10 {
-    min-height:40vh;
+    min-height:50vh;
     h1.slogan {
       transform: rotate(350deg);
       @media (max-width: $mobile) {
@@ -398,7 +430,7 @@ button, .button {
   h1.slogan {
     transform: rotate(350deg);
     padding-bottom: 10vh;
-    padding-top: 3rem;
+    font-size: 2rem;
     @media (max-width: $mobile) {
       padding-top: 0;
       transform: rotate(355deg);
@@ -595,6 +627,9 @@ header h1 {
 
   article {
     z-index: 5;
+    p.small {
+      font-size: $small-font-size;
+    }
   }
 
   ul.sidnavi {
@@ -641,6 +676,7 @@ header h1 {
 
   img.img-fluid.produktprofilbild {
     max-width: 300px;
+    padding: $base-padding;
   }
 
 
@@ -678,8 +714,11 @@ header h1 {
     list-style-image: url('../img/minus.png');
   }
 
+
+
   //* FOOTER STYLES *//
 footer {
+  background-color: rgba(0,0, 0, 0.8);
   margin-top: 4rem;
   .wrapper {
     display: flex;
@@ -702,16 +741,17 @@ footer {
     height: 80px; /* fixed header height*/
     margin: -80px 0 0; /* negative fixed header height */
   }
-  .fbandup {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
 
-    .fb-like {
-      padding-top: 20px;
-      padding-bottom: 15px;
-      max-width: 70%;
+  article a.up {
+      float: right;
+      display: inline-block;
     }
+
+
+  .fb-like {
+    padding-top: 20px;
+    padding-bottom: 15px;
+    max-width: 98%;
   }
 
 
@@ -721,7 +761,6 @@ footer {
     .faktaruta {
       margin-bottom: 16px;
     }
-
 
   }
 
@@ -748,11 +787,10 @@ footer {
     }
 
 
-    h1, .hero h1 {
-      font-size: 30px;
-    }
-    .buy-box h1 {
-      font-size: 25px;
+    h1, .hero h1, h1.faktarutarubrik, .buy-box h1 {
+      font-size: 2rem;
+      line-height: 2rem;
+      margin-bottom: 0.5rem;
     }
 
     h2 {
@@ -762,29 +800,14 @@ footer {
       font-size: 20px;
     }
 
-    ul.navi-footer {
-      & > li {
-        display: list-item !important;
-        padding-right: 0px !important;
-      }
-    }
-
-    ul.navi li,  ul.navi li.btn-group {
-      padding-right: 15px;
-    }
-
-    .dropdown-menu#second {
-      left: -55px;
-    }
-
     footer h1 {
       font-size: 22px;
       color: $light-color;
     }
 
-
-    .produktprofilbild {
+    img.img-fluid.produktprofilbild {
       max-width: 80%;
+      padding: 0.5rem 0 1rem 0;
     }
 
     .faktaruta {
@@ -796,9 +819,6 @@ footer {
 
   }
 
-  .bg-1 {
-    background: url('../img/dome.jpg');
-  }
 
 
 
